Se modifica manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ferrerepuestos Coquito",
-  "name": "Ferrerepuestos &Accesorios Coquito",
+  "short_name": "CH22",
+  "name": "Congreso Hacedores 2022",
   "icons": [
     {
       "src": "logo_maker.png",
